feat: implement auth user
