# internal/model/auth.go
@@ -1,0 +1,6 @@
+package model
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8,max=255"`
+}
